[gd_scene load_steps=13 format=3 uid="uid://bi1b7r4581svy"]

[ext_resource type="Texture2D" uid="uid://dtdjbx2w8xf1p" path="res://assets/Menu_Items/Main_Menu/MainMenuBG.png" id="1_1g60y"]
[ext_resource type="Script" path="res://scripts/Main_Menu.gd" id="1_60bmn"]
[ext_resource type="Texture2D" uid="uid://bguwm80fa8y5h" path="res://assets/Menu_Items/Main_Menu/Start_Button.png" id="2_3x70i"]
[ext_resource type="Texture2D" uid="uid://bvcd8t62tw0kt" path="res://assets/Title.png" id="3_55q7i"]
[ext_resource type="Texture2D" uid="uid://bcjvsugm21al7" path="res://assets/Menu_Items/Main_Menu/Options_Button.png" id="3_oxm63"]
[ext_resource type="Texture2D" uid="uid://srknxr48kitn" path="res://assets/Menu_Items/Main_Menu/Exit_Button.png" id="4_li0ir"]
[ext_resource type="AudioStream" uid="uid://fvg7gxiriyd6" path="res://assets/Music/CyberSong Mastered.wav" id="6_meuqw"]
[ext_resource type="Script" path="res://scripts/music_looper.gd" id="7_ol4j5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_42v7q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o8v1o"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kueys"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hsql0"]
texture = ExtResource("2_3x70i")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_60bmn")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1g60y")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="TitleVBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Seperator" type="Control" parent="MarginContainer/TitleVBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/TitleVBoxContainer"]
position = Vector2(563, 90)
scale = Vector2(0.290244, 0.290244)
texture = ExtResource("3_55q7i")

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="ButtonsVBoxContainer" type="VBoxContainer" parent="MarginContainer/ButtonsHBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="Start_Button" type="Button" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_constants/h_separation = 0
theme_override_constants/icon_max_width = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_42v7q")
icon = ExtResource("2_3x70i")
flat = true

[node name="Options_Button" type="Button" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_o8v1o")
icon = ExtResource("3_oxm63")
flat = true

[node name="Exit_Button" type="Button" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
custom_minimum_size = Vector2(120, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_kueys")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hsql0")
icon = ExtResource("4_li0ir")
flat = true

[node name="Seperator" type="Control" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
layout_mode = 2

[node name="Seperator2" type="Control" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
layout_mode = 2

[node name="Seperator3" type="Control" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
layout_mode = 2

[node name="Seperator4" type="Control" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
layout_mode = 2

[node name="Seperator5" type="Control" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
layout_mode = 2

[node name="Seperator6" type="Control" parent="MarginContainer/ButtonsHBoxContainer/ButtonsVBoxContainer"]
layout_mode = 2

[node name="looped_music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_meuqw")
bus = &"Music"
script = ExtResource("7_ol4j5")
